Added th euse of data.

--- a/doc/part2/webtech-project-part2.tex
+++ b/doc/part2/webtech-project-part2.tex
@@ -112,7 +112,7 @@
 \begin{tabular}{l}
 {\fontfamily{phv}\selectfont In Eindhoven} \\
 {\fontfamily{phv}\selectfont 30.03.2010} \\
-{\fontfamily{phv}\selectfont Kimmo Puputti, Mórocz Ádám} \\
+{\fontfamily{phv}\selectfont Puputti Kimmo, Mórocz Ádám} \\
 %{\fontfamily{phv}\selectfont student number} \\
 {\fontfamily{phv}\selectfont k.p.puputti@student.tue.nl, morocz@gmail.com}
 \end{tabular}
@@ -162,6 +162,15 @@ that can be moved and zoomed around.
 
 \section{Use of Data}
 
+Geographical data differs from country to country and it changes all
+the time. Therefore, a fixed schema is not flexible enough to describe
+the data.\\
 
+RDF is a very flexible and general format. It is very well suited for
+our application and it handles the varying and changing data
+schema. We can also infer new information that is not explicitly in
+the data, like getting the nearby places that are not linked in the
+data by querying the child places under the parent place of the
+current place.
 
 \end{document}
