Added intro and link styles.

--- a/doc/final/flying-fist.tex
+++ b/doc/final/flying-fist.tex
@@ -1,5 +1,21 @@
 \documentclass[a4paper,12pt]{article}
 
+\usepackage{hyperref}
+
+\hypersetup{
+  pdftitle={Flying Fist},
+  pdfauthor={Kimmo Puputti, Morocz Adam},
+  pdfsubject={},
+  pdfcreator={},
+  pdfproducer={pdflatex},
+  pdfkeywords={},
+  colorlinks=true,
+  linkcolor=red,
+  citecolor=green,
+  filecolor=magenta,
+  urlcolor=blue
+}
+
 \title{Web Technology 2II25:\\Flying Fist - final report}
 \author{Kimmo Puputti, kimmo.puputti@tkk.fi, 0735552\\M\'orocz \'Ad\'am, morocz@gmail.com, }
 
@@ -8,6 +24,30 @@
 \maketitle
 
 \section{Introduction}
+
+Everything that people do is somehow related to geographical
+information. This is why a lot of the resources in WWW contain
+geographical information. Place names, however, can be very ambiguous
+and it can be hard to distinguish places from text
+content. Geographical data is very linked within itself and
+geographically annotated data can be easily linked together.
+
+Our application lets you browse geographical data that is linked
+within itself and also to other third party sites like Wikipedia
+etc. We use the data from Geonames (\url{http://www.geonames.org/})
+for places inside The Netherlands in the backend of our application.
+
+You can search for places by their name and browse through the pages
+of each place. Every place is linked to several other places. You can
+also see the places on a interactive map.
+
+\section{Tool and Technologies}
+
+\subsection{Backend}
+
+
+
+\subsection{Frontend}
 
 
 
