--- a/doc/final/flying-fist.tex
+++ b/doc/final/flying-fist.tex
@@ -40,7 +40,7 @@ for places inside The Netherlands in the backend of our application.
 
 You can search for places by their name and browse through the pages
 of each place. Every place is linked to several other places. You can
-also see the places on a interactive map.
+also see the places on an interactive map.
 
 \section{Data and the ontology}
 
@@ -146,7 +146,7 @@ python fist.py run
 
 All the features in the triple store have their own page. A map is
 showing where the feature is and the features properties are listed
-under the map. Also the current weather conditions are fetches
+under the map. Also the current weather conditions are fetched
 dynamically from the Geonames API.
 
 As seen in Figure \ref{feature}, Wikipedia pages are also shown on the
@@ -160,12 +160,12 @@ API that fetches the information from the Geonames API.
   \label{feature}
 \end{figure}
 
-\noindent The same feature page is used for all browsable RDF
-resources. The data is highly linked and can therefore be easily
-browsed following the internal or external links. On the bottom of
-each resource's page, a list of recommended places is shown. Also the
-property name that links these two resources is shown in the
-recommendations (Figure \ref{recommendations}).
+The same feature page is used for all browsable RDF resources. The
+data is highly linked and can therefore be easily browsed following
+the internal or external links. On the bottom of each resource's page,
+a list of recommended places is shown. Also the property name that
+links these two resources is shown in the recommendations (Figure
+\ref{recommendations}).
 
 \begin{figure}[h]
   \includegraphics[width=\linewidth]{img/recommendations.png}
@@ -188,8 +188,8 @@ place names.
 The search results page (Figure \ref{search}) lists places whose name
 matches the search query. The results are listed in an order where the
 best match is first. Place type, its admin codes (area where the place
-is), and population is shown for each result (if found). Also, a small
-map image is shown for the best result.
+is), and population are shown for each result (if found). Also, a
+small map image is shown for the best result.
 
 \begin{figure}[h]
   \includegraphics[width=\linewidth]{img/search.png}
