--- a/doc/final/flying-fist.tex
+++ b/doc/final/flying-fist.tex
@@ -197,4 +197,25 @@ small map image is shown for the best result.
   \label{search}
 \end{figure}
 
+\clearpage
+\section{Conclusions}
+
+We created a web application to browse geographical data that is
+highly linked within itself as well as with other resources in the
+web. The backend data store uses RDF to present the data using
+triples. The use of RDF provided a flexible format that can be used
+for changing or heterogeneous data.
+
+The search feature of our application got a lot of attention and we
+are very pleased with the results. The use of the search is easy and
+intuitive, and the provided results are relevant with respect to the
+query.
+
+The browsing of the places is easy and a lot of information is
+provided for each resource. The browsing was also made as general as
+possible, so that it could not only be used for places, but for all
+resources in the ontology. Using RDF in the backend really made this
+possible. It as also nice to add external information to enrich the
+data.
+
 \end{document}
