Added Adams student number.

--- a/doc/final/flying-fist.tex
+++ b/doc/final/flying-fist.tex
@@ -18,7 +18,7 @@
 }
 
 \title{Web Technology 2II25:\\Flying Fist - final report}
-\author{Kimmo Puputti, kimmo.puputti@tkk.fi, 0735552\\M\'orocz \'Ad\'am, morocz@gmail.com, }
+\author{Kimmo Puputti, kimmo.puputti@tkk.fi, 0735552\\M\'orocz \'Ad\'am, morocz@gmail.com, 0738148}
 
 \begin{document}
 
